--- a/rtmp/build.gradle
+++ b/rtmp/build.gradle
@@ -8,8 +8,6 @@ android {
   defaultConfig {
     minSdkVersion 16
     targetSdkVersion 33
-    versionCode version_code
-    versionName version_name
   }
   buildTypes {
     release {
@@ -20,6 +18,7 @@ android {
   publishing {
     singleVariant("release")
   }
+    namespace 'com.pedro.rtmp'
 }
 
 afterEvaluate {
