--- a/rtsp/build.gradle
+++ b/rtsp/build.gradle
@@ -8,9 +8,7 @@ android {
   defaultConfig {
     minSdkVersion 16
     targetSdkVersion 33
-    versionCode version_code
-    versionName version_name
-    buildConfigField 'int', 'VERSION_CODE', "${version_code}"
+      buildConfigField 'int', 'VERSION_CODE', "${version_code}"
     buildConfigField 'String', 'VERSION_NAME', "\"${version_name}\""
   }
   buildTypes {
@@ -23,6 +21,7 @@ android {
   publishing {
     singleVariant("release")
   }
+    namespace 'com.pedro.rtsp'
 }
 
 afterEvaluate {
