--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
       android:theme="@style/AppTheme"
       >
     <activity
-        android:name=".MainActivity"
+        android:name=".customexample.RtspActivity"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:exported="true">
@@ -42,11 +42,11 @@
 <!--        android:label="@string/rtmp_streamer"-->
 <!--        android:screenOrientation="portrait"-->
 <!--        />-->
-    <activity
-        android:name=".customexample.RtspActivity"
-        android:label="@string/rtsp_streamer"
-        android:screenOrientation="portrait"
-        />
+<!--    <activity-->
+<!--        android:name=".customexample.RtspActivity"-->
+<!--        android:label="@string/rtsp_streamer"-->
+<!--        android:screenOrientation="portrait"-->
+<!--        />-->
 <!--    <activity-->
 <!--        android:name=".defaultexample.ExampleRtspActivity"-->
 <!--        android:label="@string/default_rtsp"-->
